--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,10 +1,10 @@
 baseURL = ""
-title = "Hugo Zzo Theme"
+title = "Technovision"
 theme = "zzo"
 
 defaultContentLanguage = "en"
-defaultContentLanguageInSubdir = true
-hasCJKLanguage = true
+defaultContentLanguageInSubdir = false
+hasCJKLanguage = false
 
 summaryLength = 70
 buildFuture = true
