--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -1,9 +1,9 @@
-logoText = "Zzo"
+logoText = "Technovision"
 logoType = "short" # long, short
 description = "The Zzo theme for Hugo example site."
 custom_css = []
 custom_js = []
-useFaviconGenerator = true # https://www.favicon-generator.org/
+useFaviconGenerator = false # https://www.favicon-generator.org/
 meta_image = ""
 themecolor = ""
 
@@ -105,7 +105,7 @@ updateFrequency = ""
 fullContents = false
 
 # comment
-enableComment = true
+enableComment = false
 disqus_shortname = ""
 commento = false
 
