--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -16,7 +16,7 @@ paginate = 13
 rssLimit = 100
 
 enableGitInfo = false
-googleAnalytics = ""
+googleAnalytics = "UA-150662820-2"
 
 [markup]
   [markup.goldmark]
