--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -60,7 +60,7 @@ typeIcon = "🎯"
 
 # whoami
 myname = "Technovision"
-email = "nitin.designtech@gmail.com"
+email = "nitin.patel9099@gmail.com"
 whoami = ""
 bioImageUrl = "/images/whoami/avatar.jpg"
 useGravatar = false
